--- a/src/DomainDrivenGameEngine.RuleSet/DomainDrivenGameEngine.RuleSet.nuspec
+++ b/src/DomainDrivenGameEngine.RuleSet/DomainDrivenGameEngine.RuleSet.nuspec
@@ -6,8 +6,10 @@
     <version>0.1.0</version>
 	<authors>Preston Chaderton</authors>
 	<company>Preston Chaderton</company>
-	<repositoryurl>https://github.com/pchaderton/DomainDrivenGameEngine.RuleSet</repositoryurl>
-	<repositoryType>git</repositoryType>
+	<repository>
+		<type>git</type>
+		<url>https://github.com/pchaderton/DomainDrivenGameEngine.RuleSet</url>
+	</repository>
     <dependencies>
       <dependency id="StyleCop.Analyzers" version="1.1.118" />
     </dependencies>
