--- a/src/DomainDrivenGameEngine.RuleSet/DomainDrivenGameEngine.RuleSet.nuspec
+++ b/src/DomainDrivenGameEngine.RuleSet/DomainDrivenGameEngine.RuleSet.nuspec
@@ -3,13 +3,10 @@
   <metadata>
     <id>DomainDrivenGameEngine.RuleSet</id>
 	<description>A set of StyleCop rules to utilize across any DomainDrivenGameEngine.* projects to ensure consistent code quality.</description>
-    <version>0.1.1</version>
+    <version>0.1.2</version>
 	<authors>Preston Chaderton</authors>
 	<company>Preston Chaderton</company>
-	<repository>
-		<type>git</type>
-		<url>https://github.com/pchaderton/DomainDrivenGameEngine.RuleSet</url>
-	</repository>
+	<repository type="git" url="https://github.com/pchaderton/DomainDrivenGameEngine.RuleSet" />
     <dependencies>
       <dependency id="StyleCop.Analyzers" version="1.1.118" />
     </dependencies>
